--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "next": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
